--- a/articles/active-directory/reports-monitoring/toc.yml
+++ b/articles/active-directory/reports-monitoring/toc.yml
@@ -8,6 +8,8 @@
       href: overview-monitoring.md
     - name: ¿Cuál es el diagnóstico de la información de inicio de sesión?
       href: overview-sign-in-diagnostics.md
+    - name: ¿Qué son los inicios de sesión marcados?
+      href: overview-flagged-sign-ins.md
 - name: Guías de inicio rápido
   expanded: true
   items:
@@ -60,6 +62,8 @@
           href: howto-find-activity-reports.md
         - name: Solución de errores de inicio de sesión para un usuario
           href: howto-troubleshoot-sign-in-errors.md
+        - name: Corrección de usuarios marcados en riesgo
+          href: howto-remediate-users-flagged-for-risk.md
         - name: Configuración de requisitos previos para la API de informes
           href: howto-configure-prerequisites-for-reporting-api.md
         - name: "Uso de libros de Azure\_AD"
@@ -91,8 +95,6 @@
 - name: Referencia
   expanded: true
   items:
-    - name: Identificadores de información básica en el registro de inicio de sesión
-      href: reference-basic-info-identifiers.md
     - name: Cmdlets de Azure AD PowerShell para informes
       href: reference-powershell-reporting.md
     - name: Referencia de la API de registros de auditoría
