--- a/articles/active-directory/verifiable-credentials/index.yml
+++ b/articles/active-directory/verifiable-credentials/index.yml
@@ -1,47 +1,59 @@
 ### YamlMime:Landing
-title: Documentación sobre las credenciales verificables de Azure Active Directory
+title: Documentación sobre las credenciales verificables de Azure Active Directory (versión preliminar)
 summary: Las credenciales verificables le ayudan a crear soluciones que permiten a los clientes administrar sus propios datos.
 metadata:
   author: barclayn
   description: Aprenda a incorporar credenciales verificables en las soluciones que permiten a los clientes controlar la información sobre sí mismos.
-  manager: daveba
+  manager: karenh444
   ms.author: barclayn
   ms.collection: na
-  ms.date: 03/30/2021
+  ms.date: 10/13/2021
   ms.service: active-directory
   ms.subservice: na
   ms.topic: landing-page
   services: active-directory
-  ms.openlocfilehash: 13eb88e8e8613c913f66185eba751a1fe3c36e1e
-  ms.sourcegitcommit: d23602c57d797fb89a470288fcf94c63546b1314
+  ms.openlocfilehash: 8a69a36231d2eb47307537da0e39ab4306942669
+  ms.sourcegitcommit: 611b35ce0f667913105ab82b23aab05a67e89fb7
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 04/01/2021
-  ms.locfileid: "106176215"
+  ms.lasthandoff: 10/14/2021
+  ms.locfileid: "130006800"
 landingContent:
-- title: Acerca de las credenciales verificables
+- title: Conceptos clave
   linkLists:
   - linkListType: overview
     links:
     - text: Introducción a las credenciales verificables de Azure Active Directory (versión preliminar)
       url: decentralized-identifier-overview.md
+  - linkListType: overview
+    links:
+    - text: Principios rectores de las identidades descentralizadas
+      url: https://www.microsoft.com/security/blog/2021/10/06/microsofts-5-guiding-principles-for-decentralized-identities/
   - linkListType: video
     links:
     - text: Gobierno del acceso a los recursos
       url: https://www.youtube.com/watch?v=r20hCF9NbTo
-- title: Las credenciales verificables ofrecen a los usuarios el control de su información personal
+- title: Obtenga información sobre el servicio de credenciales verificables de Azure Active Directory
   linkLists:
   - linkListType: tutorial
     links:
     - text: Introducción a las credenciales verificables
-      url: get-started-verifiable-credentials.md
+      url: enable-your-tenant-verifiable-credentials.md
+  - linkListType: tutorial
+    links:
+    - text: Generación de credenciales verificables
+      url: verifiable-credentials-configure-issuer.md
+- title: Compilación de soluciones de credenciales verificables
+  linkLists:
   - linkListType: concept
     links:
-    - text: Ejemplos de comunicación del servicio emisor.
-      url: issuer-openid.md
-- title: Vinculación de la identidad descentralizada
-  linkLists:
+    - text: Planeamiento de su arquitectura
+      url: introduction-to-verifiable-credentials-architecture.md
   - linkListType: how-to-guide
     links:
-    - text: Vinculación del dominio a su identificador distribuido
-      url: how-to-dnsbind.md
+    - text: Request Service API para emisores
+      url: issuance-request-api.md
+  - linkListType: how-to-guide
+    links:
+    - text: Request Service API para comprobadores
+      url: presentation-request-api.md
