--- a/articles/applied-ai-services/form-recognizer/toc.yml
+++ b/articles/applied-ai-services/form-recognizer/toc.yml
@@ -137,6 +137,20 @@ items:
     items:
       - name: "Códigos de error y mensajes\_v3.0 (versión preliminar)"
         href: preview-error-guide.md
+      - name: API REST v3.0 de Azure Form Recognizer (versión preliminar)
+        items:
+          - name: "Referencia de API REST\_v3.0"
+            href: 'https://westus.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v3-0-preview-1/operations/AnalyzeDocument'
+          - name: SDK y bibliotecas cliente
+            items:
+              - name: .NET
+                href: 'https://azuresdkdocs.blob.core.windows.net/$web/dotnet/Azure.AI.FormRecognizer/4.0.0-beta.1/index.html'
+              - name: Python
+                href: 'https://azuresdkdocs.blob.core.windows.net/$web/python/azure-ai-formrecognizer/3.2.0b1/index.html'
+              - name: Java
+                href: 'https://azuresdkdocs.blob.core.windows.net/$web/java/azure-ai-formrecognizer/4.0.0-beta.1/index.html'
+              - name: JavaScript
+                href: 'https://azuresdkdocs.blob.core.windows.net/$web/javascript/azure-ai-form-recognizer/4.0.0-beta.1/index.html'
       - name: API REST v2.1 de Azure Form Recognizer
         items:
           - name: Referencia de la API REST v2.1
@@ -155,7 +169,7 @@ items:
         items:
           - name: Referencia de la API REST v2.0
             href: 'https://westus2.dev.cognitive.microsoft.com/docs/services/form-recognizer-api-v2/operations/AnalyzeWithCustomForm'
-          - name: Guía de SDK v3.0.0
+          - name: Guía del SDK
             href: api-v2-0/reference-sdk-api-v2-0.md
   - name: Recursos
     items:
