--- a/articles/azure-resource-manager/bicep/toc.yml
+++ b/articles/azure-resource-manager/bicep/toc.yml
@@ -49,8 +49,12 @@
           href: outputs.md
           displayName: 'dynamic number of outputs,modules'
         - name: Módulos
-          href: modules.md
-          displayName: 'scopes,consume'
+          items:
+            - name: Definición del módulo
+              href: modules.md
+              displayName: 'scopes,consume'
+            - name: Creación de un registro privado
+              href: private-module-registry.md
         - name: Bucles
           items:
             - name: Recursos
@@ -148,11 +152,13 @@
     - name: Estructura de archivos de Bicep
       displayName: 'parameters,variables,resources,outputs,condition'
       href: file.md
-    - name: Referencia de recursos de Bicep
+    - name: Referencia del recurso
       href: /azure/templates/
     - name: Tipos de datos
       href: data-types.md
-      displayName: 'supported types,arrays,booleans,integers,objects,strings,secure,'
+      displayName: 'supported types,arrays,booleans,integers,objects,strings,secure'
+    - name: Archivo de configuración de Bicep
+      href: bicep-config.md
     - name: Funciones
       items:
         - name: Todas las funciones
