--- a/articles/azure-sql/toc.yml
+++ b/articles/azure-sql/toc.yml
@@ -278,7 +278,7 @@
         - name: ¿Qué es SQL Database?
           href: database/sql-database-paas-overview.md
         - name: Novedades
-          href: database/doc-changes-updates-release-notes.md?&tabs=single-database
+          href: database/doc-changes-updates-release-notes-whats-new.md
         - name: Bases de datos únicas
           href: database/single-database-overview.md
         - name: Grupos elásticos
@@ -759,7 +759,7 @@
         - name: ¿Qué es Instancia administrada de SQL?
           href: managed-instance/sql-managed-instance-paas-overview.md
         - name: Novedades
-          href: database/doc-changes-updates-release-notes.md?&tabs=managed-instance
+          href: managed-instance/doc-changes-updates-release-notes-whats-new.md
         - name: Grupos de instancias
           href: managed-instance/instance-pools-overview.md
         - name: Preguntas más frecuentes
@@ -976,7 +976,7 @@
                     - name: Conversión de código de R para SQL Server
                       href: /sql/machine-learning/r/converting-r-code-for-use-in-sql-server?context=%2fazure%2fazure-sql%2fmanaged-instance%2fcontext%2fml-context&preserve-view=true&view=azuresqldb-mi-current
                     - name: Crear un procedimiento almacenado mediante sqlrutils
-                      href: /machine-learning-server/r-reference/sqlrutils/how-to-create-a-stored-procedure-from-r
+                      href: /sql/machine-learning/r/reference/sqlrutils/how-to-create-stored-procedure-from-r
                 - name: Predicciones
                   items:
                     - name: Puntuación nativa con PREDICT T-SQL
@@ -1108,7 +1108,7 @@
             - name: ¿Qué es una VM con SQL Server?
               href: virtual-machines/windows/sql-server-on-azure-vm-iaas-what-is-overview.md
             - name: Novedades
-              href: virtual-machines/windows/doc-changes-updates-release-notes.md
+              href: virtual-machines/windows/doc-changes-updates-release-notes-whats-new.md
         - name: Guías de inicio rápido
           items:
             - name: Portal
@@ -1426,6 +1426,8 @@
       href: 'https://stackoverflow.com/questions/tagged/sql-azure'
     - name: Solución de problemas
       items:
+        - name: Problemas conocidos con Azure SQL Managed Instance
+          href: managed-instance/doc-changes-updates-known-issues.md
         - name: Errores de capacidad durante la implementación
           href: capacity-errors-troubleshoot.md
         - name: Errores de conectividad
