--- a/articles/container-registry/index.yml
+++ b/articles/container-registry/index.yml
@@ -12,12 +12,12 @@ metadata:
   author: dlepow
   ms.author: danlep
   ms.date: 11/08/2019
-  ms.openlocfilehash: c4820bef73e2dac03f2b400ff4c802f9e7cb8e65
-  ms.sourcegitcommit: 192444210a0bd040008ef01babd140b23a95541b
+  ms.openlocfilehash: cb092b5fd8131c67931c85758d71f955fdf4110d
+  ms.sourcegitcommit: 611b35ce0f667913105ab82b23aab05a67e89fb7
   ms.translationtype: HT
   ms.contentlocale: es-ES
-  ms.lasthandoff: 07/15/2021
-  ms.locfileid: "114219029"
+  ms.lasthandoff: 10/14/2021
+  ms.locfileid: "129998492"
 landingContent:
 - title: Acerca de Azure Container Registry
   linkLists:
@@ -25,8 +25,6 @@ landingContent:
     links:
     - text: ¿Qué es Azure Container Registry?
       url: container-registry-intro.md
-    - text: Registros, repositorios e imágenes
-      url: container-registry-concepts.md
 - title: Introducción
   linkLists:
   - linkListType: quickstart
@@ -53,6 +51,10 @@ landingContent:
       url: https://azure.microsoft.com/resources/videos/index/?services=container-registry&sort=newest
 - title: Administración de registros
   linkLists:
+  - linkListType: quickstart
+    links:
+    - text: Administración de contenido con bibliotecas cliente
+      url: quickstart-client-libraries.md
   - linkListType: how-to-guide
     links:
     - text: Visualización de repositorios y etiquetas
@@ -65,6 +67,8 @@ landingContent:
       url: container-registry-delete.md
   - linkListType: concept
     links:
+    - text: Registros, repositorios e imágenes
+      url: container-registry-concepts.md
     - text: Replicación geográfica
       url: container-registry-geo-replication.md
     - text: Authentication
