--- a/articles/cost-management-billing/toc.yml
+++ b/articles/cost-management-billing/toc.yml
@@ -54,6 +54,8 @@
           href: costs/ingest-azure-usage-at-scale.md
         - name: Cost Management para asociados
           href: costs/get-started-partners.md
+        - name: Migración de los informes de EA a las API de Azure Resource Manager
+          href: costs/migrate-from-enterprise-reporting-to-azure-resource-manager-apis.md
     - name: Reservations
       items:
         - name: ¿Qué es Azure Reservations?
@@ -122,10 +124,6 @@
           href: understand/mca-overview.md
         - name: Cuentas de facturación del contrato de Microsoft Partner
           href: understand/mpa-overview.md
-        - name: Acerca de la transferencia de suscripciones
-          href: understand/subscription-transfer.md
-        - name: Transferencia de suscripciones entre asociados (versión preliminar)
-          href: manage/azure-plan-subscription-transfer-partners.md
         - name: Introducción al portal de Azure EA
           href: manage/ea-portal-get-started.md
         - name: 'Solicitud de un crédito de retención de impuestos: India'
@@ -142,6 +140,8 @@
           items:
             - name: Tareas de administración de cuentas
               href: manage/account-admin-tasks.md
+            - name: Pagar la factura
+              href: understand/pay-bill.md
             - name: Edición de la información de contacto de facturación
               href: manage/change-azure-account-profile.md
             - name: Resolución del saldo vencido
@@ -154,28 +154,6 @@
               href: manage/link-partner-id.md
             - name: Vinculación de un identificador de asociado a cuentas de Power Apps
               href: manage/link-partner-id-power-apps-accounts.md
-        - name: Administración de suscripciones
-          items:
-            - name: Asignar acceso a datos de Administración de costos
-              href: costs/assign-access-acm-data.md
-            - name: Estados de la suscripción
-              href: manage/subscription-states.md
-            - name: Reactivación de la suscripción
-              href: manage/subscription-disabled.md
-            - name: Reactivación de la suscripción de Azure para estudiantes
-              href: manage/azurestudents-subscription-disabled.md
-            - name: Transferencia de la propiedad
-              href: manage/billing-subscription-transfer.md
-            - name: Transferencia de la propiedad de Contrato de cliente de Microsoft
-              href: manage/mca-request-billing-ownership.md
-            - name: Transferencia de la propiedad de Contrato de partner
-              href: manage/mpa-request-ownership.md
-            - name: Instalación y configuración de la integración de AWS
-              href: costs/aws-integration-set-up-configure.md
-    - name: Realización de tareas clave de administración de facturación
-      items:
-        - name: Administrar cuentas
-          items:
             - name: Visualización de cuentas de facturación
               href: manage/view-all-accounts.md
             - name: Organización de costos con secciones de factura
@@ -188,9 +166,19 @@
               href: manage/azure-account-for-microsoft-365-subscription.md
             - name: Pago mediante la autenticación sólida de clientes
               href: manage/open-banking-strong-customer-authentication.md
-        - name: Administrar suscripciones
+        - name: Administración de suscripciones
           items:
-            - name: Pago mediante factura
+            - name: Asignar acceso a datos de Administración de costos
+              href: costs/assign-access-acm-data.md
+            - name: Estados de la suscripción
+              href: manage/subscription-states.md
+            - name: Reactivación de la suscripción
+              href: manage/subscription-disabled.md
+            - name: Reactivación de la suscripción de Azure para estudiantes
+              href: manage/azurestudents-subscription-disabled.md
+            - name: Instalación y configuración de la integración de AWS
+              href: costs/aws-integration-set-up-configure.md
+            - name: Configuración del pago mediante factura
               href: manage/pay-by-invoice.md
             - name: Creación de suscripciones adicionales
               href: manage/create-subscription.md
@@ -206,12 +194,30 @@
               href: manage/add-change-subscription-administrator.md
             - name: Cambio de oferta de suscripción
               href: manage/switch-azure-offer.md
-            - name: Transferencia de suscripciones de CSP
-              href: manage/transfer-subscriptions-subscribers-csp.md
             - name: Cancelación de la suscripción
               href: manage/cancel-azure-subscription.md
             - name: Administración de directivas de suscripción
               href: manage/manage-azure-subscription-policy.md
+        - name: Transferencia de suscripciones
+          items:
+            - name: Transferencias de suscripciones de Azure
+              href: manage/subscription-transfer.md
+            - name: Transferencia de la propiedad de la suscripción
+              href: manage/billing-subscription-transfer.md
+            - name: Transferencia de suscripciones entre asociados (versión preliminar)
+              href: manage/azure-plan-subscription-transfer-partners.md
+            - name: "Transferencia de cuentas de\_EA"
+              href: manage/ea-transfers.md
+            - name: "Transferencia de suscripción a\_EA"
+              href: manage/mosp-ea-transfer.md
+            - name: Transferencia de suscripciones de CSP
+              href: manage/transfer-subscriptions-subscribers-csp.md
+            - name: Transferencia de la propiedad de Contrato de cliente de Microsoft
+              href: manage/mca-request-billing-ownership.md
+            - name: Transferencia de la propiedad de Contrato de partner
+              href: manage/mpa-request-ownership.md
+    - name: Realización de tareas clave de administración de facturación
+      items:
         - name: Creación de suscripciones mediante programación
           items:
             - name: Creación de suscripciones mediante programación
@@ -230,16 +236,18 @@
               href: manage/understand-ea-roles.md
             - name: Administración del portal del Contrato Enterprise de Azure
               href: manage/ea-portal-administration.md
+            - name: "Administración de\_EA de Azure"
+              href: manage/direct-ea-administration.md
             - name: Administración del portal del Contrato Enterprise de Azure para asociados
               href: manage/ea-partner-portal-administration.md
-            - name: Transferencias de Azure Enterprise
-              href: manage/ea-transfers.md
             - name: Tareas de EA del contrato de cliente de Microsoft
               href: manage/mca-enterprise-operations.md
             - name: Acuerdos y enmiendas de Contrato Enterprise de Azure
               href: manage/ea-portal-agreements.md
             - name: Facturas de inscripciones de la empresa
               href: manage/ea-portal-enrollment-invoices.md
+            - name: Visualización y descarga de los detalles de uso directo de EA
+              href: manage/direct-ea-azure-usage-charges-invoices.md
             - name: Precios del Contrato Enterprise de Azure
               href: manage/ea-pricing-overview.md
             - name: API REST de Azure Enterprise
@@ -250,8 +258,6 @@
               href: manage/ea-azure-marketplace.md
         - name: Descarga de la información de costo y facturación
           items:
-            - name: Pagar la factura
-              href: understand/pay-bill.md
             - name: Visualización y descarga de la factura de Azure
               href: understand/download-azure-invoice.md
             - name: Visualización y descarga de los datos de uso y los cargos de Azure
