--- a/articles/spring-cloud/toc.yml
+++ b/articles/spring-cloud/toc.yml
@@ -160,6 +160,8 @@
           href: how-to-enable-system-assigned-managed-identity.md
         - name: Creación de roles y permisos
           href: how-to-permissions.md
+        - name: Uso de un certificado TLS/SSL
+          href: how-to-use-tls-certificate.md
         - name: Habilitación de la seguridad de la capa de transporte de un extremo a otro
           href: how-to-enable-end-to-end-tls.md
         - name: Acceso a Config Server y Service Registry
