--- a/articles/azure-monitor/toc.yml
+++ b/articles/azure-monitor/toc.yml
@@ -151,8 +151,6 @@
           href: alerts/alerts-unified-log.md
         - name: Alertas de registros de actividad
           href: alerts/activity-log-alerts.md
-    - name: Visualización de datos
-      href: visualizations.md
     - name: Integraciones de asociados
       href: partners.md
     - name: Seguridad
@@ -166,6 +164,18 @@
   items:
     - name: Escenarios
       items:
+        - name: Procedimientos recomendados de Azure Monitor
+          items:
+            - name: Información general
+              href: best-practices.md
+            - name: Planificación
+              href: best-practices-plan.md
+            - name: Configuración de la recopilación de datos
+              href: best-practices-data-collection.md
+            - name: Análisis y visualizaciones
+              href: best-practices-analysis.md
+            - name: Alertas y acciones automatizadas
+              href: best-practices-alerts.md
         - name: Supervisión de un recurso de Azure
           href: essentials/monitor-azure-resource.md
         - name: Supervisión de máquinas virtuales
@@ -185,13 +195,6 @@
           displayname: VM
         - name: Supervisión de Kubernetes
           href: ../aks/monitor-aks.md?toc=/azure/azure-monitor/toc.json
-    - name: Implementación
-      items:
-        - name: Implementación de Azure Monitor
-          href: deploy.md
-        - name: Implementación a escala
-          displayName: 'Azure Policy, Policy'
-          href: deploy-scale.md
     - name: Administración y configuración
       items:
         - name: Permisos de roles y seguridad
@@ -402,9 +405,6 @@
             - name: Recopilación de datos
               displayname: 'data collection rule,Azure Monitor agent'
               href: agents/data-collection-rule-azure-monitor-agent.md
-            - name: Implementación a escala
-              displayname: Deploy Azure Monitor agent at scale
-              href: deploy-scale.md#azure-monitor-agent
             - name: Migración desde agentes heredados
               displayname: Migrate to Azure Monitor agent
               href: agents/azure-monitor-agent-migration.md
@@ -875,7 +875,7 @@
               href: essentials/app-insights-metrics.md
             - name: Métricas estándar
               href: app/standard-metrics.md
-        - name: Search
+        - name: Búsqueda de transacciones
           href: app/diagnostic-search.md
         - name: Generador de perfiles
           items:
@@ -1410,6 +1410,8 @@
           href: app/custom-endpoints.md
         - name: Azure Functions
           href: app/azure-functions-supported-features.md
+        - name: Statsbeat
+          href: app/statsbeat.md
         - name: Notas de la versión
           items:
             - name: SDK de supervisión con código
