--- a/articles/azure-web-pubsub/toc.yml
+++ b/articles/azure-web-pubsub/toc.yml
@@ -51,16 +51,24 @@
       items:
         - name: Creación de clientes de WebSocket
           href: howto-websocket-connect.md
+    - name: Monitor
+      items:
+        - name: Auditoría de cumplimiento mediante Azure Policy
+          href: howto-monitor-azure-policy.md
     - name: Seguridad
       items:
         - name: Protección de la clave de acceso
           href: howto-secure-rotate-access-key.md
+        - name: Uso de etiquetas de servicio de Azure
+          href: howto-service-tags.md
         - name: Uso de puntos de conexión privados de Azure
           href: howto-secure-private-endpoints.md
         - name: Administración del control de acceso a la red
           href: howto-secure-network-access-control.md
         - name: Protección del tráfico saliente a través de puntos de conexión privados compartidos
           href: howto-secure-shared-private-endpoints.md
+        - name: Uso de una identidad administrada
+          href: howto-use-managed-identity.md
     - name: Solucionar problemas
       items:
         - name: Recopilación de un seguimiento de red
