--- a/articles/virtual-desktop/remote-app-streaming/TOC.yml
+++ b/articles/virtual-desktop/remote-app-streaming/TOC.yml
@@ -203,7 +203,7 @@
     - name: 'Información general sobre solución de problemas, comentarios y soporte técnico'
       href: ../troubleshoot-set-up-overview.md?toc=/azure/virtual-desktop/remote-app-streaming/toc.json&bc=/azure/virtual-desktop/breadcrumb/toc.json
     - name: Identificación y diagnóstico de problemas
-      href: ../diagnostics-role-service.md?toc=/azure/virtual-desktop/remote-app-streaming/toc.json&bc=/azure/virtual-desktop/breadcrumb/toc.json
+      href: ../troubleshoot-set-up-overview.md?bc=%2fazure%2fvirtual-desktop%2fbreadcrumb%2ftoc.json&toc=%2fazure%2fvirtual-desktop%2fremote-app-streaming%2ftoc.json
     - name: Característica de introducción
       href: ../troubleshoot-getting-started.md?toc=/azure/virtual-desktop/remote-app-streaming/toc.json&bc=/azure/virtual-desktop/breadcrumb/toc.json
     - name: Creación de grupos de hosts
