--- a/articles/virtual-network/ip-services/toc.yml
+++ b/articles/virtual-network/ip-services/toc.yml
@@ -26,7 +26,7 @@ items:
     items:
       - name: Configuración de una máquina virtual con preferencia de enrutamiento de Internet
         items:
-          - name: Azure portal
+          - name: Azure Portal
             href: tutorial-routing-preference-virtual-machine-portal.md
           - name: Azure PowerShell
             href: configure-routing-preference-virtual-machine-powershell.md
@@ -98,7 +98,7 @@ items:
             href: remove-public-ip-address-vm.md
           - name: 'Creación de una máquina virtual: IP pública estática'
             items:
-              - name: Azure portal
+              - name: Azure Portal
                 href: virtual-network-deploy-static-pip-arm-portal.md
               - name: Azure PowerShell
                 href: virtual-network-deploy-static-pip-arm-ps.md
@@ -106,7 +106,7 @@ items:
                 href: virtual-network-deploy-static-pip-arm-cli.md
           - name: 'Creación de una máquina virtual: IP privada estática'
             items:
-              - name: Azure portal
+              - name: Azure Portal
                 href: virtual-networks-static-private-ip-arm-pportal.md
               - name: Azure PowerShell
                 href: virtual-networks-static-private-ip-arm-ps.md
@@ -122,7 +122,7 @@ items:
                 href: virtual-network-multiple-ip-addresses-cli.md
           - name: 'Creación de máquina virtual: Dirección IP privada estática (clásica)'
             items:
-              - name: Azure portal
+              - name: Azure Portal
                 href: virtual-networks-static-private-ip-classic-pportal.md
               - name: Azure PowerShell
                 href: virtual-networks-static-private-ip-classic-ps.md
@@ -132,7 +132,7 @@ items:
         items:
           - name: Creación de una dirección IP pública
             items:
-              - name: Azure portal
+              - name: Azure Portal
                 href: routing-preference-portal.md
               - name: Azure PowerShell
                 href: routing-preference-powershell.md
@@ -141,7 +141,7 @@ items:
       - name: Traslado entre regiones
         items:
           - name: Direcciones IP públicas
-            href: /azure/resource-mover/tutorial-move-region-virtual-machines?toc=/azure/virtual-network/ip-services/toc.json
+            href: ../../resource-mover/tutorial-move-region-virtual-machines.md?toc=%2fazure%2fvirtual-network%2fip-services%2ftoc.json
   - name: Referencia
     items:
       - name: Azure CLI
