--- a/articles/azure-resource-manager/bicep/toc.yml
+++ b/articles/azure-resource-manager/bicep/toc.yml
@@ -56,28 +56,13 @@
             - name: Creación de un registro privado
               href: private-module-registry.md
         - name: Bucles
-          items:
-            - name: Recursos
-              displayName: 'iteration,copy,multiple,batches,child,condition,filter'
-              href: loop-resources.md
-            - name: Módulos
-              displayName: 'iteration,copy,multiple,batches,condition,filter'
-              href: loop-modules.md
-            - name: Propiedades
-              displayName: 'iteration,copy,multiple'
-              href: loop-properties.md
-            - name: variables
-              displayName: 'iteration,copy,multiple'
-              href: loop-variables.md
-            - name: Salidas
-              displayName: 'iteration,copy,multiple'
-              href: loop-outputs.md
+          href: loops.md
         - name: Ámbitos
           items:
             - name: Resource group
               href: deploy-to-resource-group.md
               displayName: 'deployment commands,multiple resource groups'
-            - name: Suscripción
+            - name: Subscription
               href: deploy-to-subscription.md
               displayName: 'Azure Policy,policy,access control'
             - name: Grupo de administración
